welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
	return
        ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
if(!estFaceMur){
^