welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Color = Color.gray
if(!estFaceMur){
	avance()
	couleur = getCouleurSol()
	return
}
}

